--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Stars in Graz</title>
+  </head>
+  <body>
     <div class="landing">
-        <div class="content">
-            <h1 class="title">Stars in Graz</h1>
-            <div class="desc">
-                <p>Messe Congress Graz<br>30.10.2021</p>
-                <p>Check back on<br>25.09.2021</p>
-                <ul class="carousel">
-                    <li>Bilderbuch</li>
-                    <li>Wanda</li>
-                    <li>Christina Stürmer</li>
-                    <li>Volbeat</li>
-                    <li>Imagine Dragons</li>
-                    <li>Opus</li>
-                </ul>
-            </div>
+      <div class="content">
+        <h1 class="title">Stars in Graz</h1>
+        <div class="desc">
+          <p>Messe Congress Graz<br />30.10.2021</p>
+          <p>Check back on<br />25.09.2021</p>
+          <div>
+            <p>Featuring:</p>
+            <ul class="carousel">
+              <li>Bilderbuch</li>
+              <li>Wanda</li>
+              <li>Christina Stürmer</li>
+              <li>Volbeat</li>
+              <li>Imagine Dragons</li>
+              <li>Opus</li>
+            </ul>
+          </div>
         </div>
-            <p id="scroll-down">&#8744;</p>
+      </div>
+      <div id="scroll-down">^</div>
     </div>
-</body>
+  </body>
 </html>
