Added navigation menu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
           </div>
         </div>
       </div>
-      <div id="scroll-down">^</div>
+      <a id="scroll-down" href="#Menu">^</a>
+    </div>
+    <nav id="Menu">
+      <a href="#Schedule">Schedule</a>
+      <a href="#Testimonials">Testimonials</a>
+      <a href="#FAQ">FAQ</a>
+    </nav>
+    <div id="Schedule">
+
+    </div>
+    <div id="Testimonials">
+
+    </div>
+    <div id="FAQ">
+
     </div>
   </body>
 </html>
