--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
         </div>
       </div>
-      <a id="scroll-down" href="#Menu">^</a>
+      <a class="scroll-down" href="#Menu">^</a>
     </div>
     <nav id="Menu">
       <a href="#Schedule">Schedule</a>
@@ -46,7 +46,48 @@
 
     </div>
     <div id="FAQ">
-
+      <div>
+        <p class="question">What is Stars in Graz?</p>
+        <p class="answer">Stars in Graz is a one-day music concert where many different artists perform their most popular songs. <br>
+          It takes place once a year since 2015.</p>
+      </div>
+          <hr/>
+      <div>
+        <p class="question">When does Stars in Graz take place?</p>
+        <p class="answer">On 30.10.2021. <br>
+          The first act starts at 17:00.
+          </p>
+      </div>
+          <hr/>
+      <div>
+        <p class="question">What is the age minimum?</p>
+        <p class="answer">Persons under 16 years of age are not allowed to enter without the accompaniment of an adult.</p>
+      </div>
+        <hr/>
+      <div>
+        <p class="question">Can I pay by credit card?</p>
+        <p class="answer">Yes, credit cards can be used at all food stands.</p>
+      </div>
+        <hr/>
+      <div>
+        <p class="question">What is the golden circle?</p>
+        <p class="answer">In the Golden Circle, you experience your favorite act as close as possible. <br>
+          It is located directly in front of the stage. <br>
+          Show your Golden Circle ticket and you'll get to this area quickly and easily thanks to a separate entrance.</p>
+      </div>
+          <hr/>
+      <div>
+        <p class="question">Are there wheelchair spaces?</p>
+        <p class="answer">Of course, wheelchair spaces are available. <br>
+          However, spaces are limited. Please contact us in advance for more information.</p>
+      </div>
+          <hr/>
+      <div>
+        <p class="question">Can I resale my ticket if I cannot go?</p>
+        <p class="answer">The resale of the tickets is prohibited. <br>
+          For security reasons, we also strongly advise against buying the tickets from anyone. <br>
+          Anyone who tries to gain access to the event with copied or forged tickets will be suspected of ticket misuse and prosecuted.</p>
+      </div>
     </div>
   </body>
 </html>
