--- a/index.html
+++ b/index.html
@@ -40,7 +40,50 @@
       <a href="#FAQ">FAQ</a>
     </nav>
     <div id="Schedule">
-
+      <div class="time-table">
+          <ul>
+            <li>17:00 - Bilderbuch</li>
+            <li>18:00 - Wanda</li>
+            <li>19:00 - Christina Stürmer</li>
+            <li>20:00 - Volbeat</li>
+            <li>21:00 - Imagine Dragons</li>
+            <li>22:00 - Opus</li>
+          </ul>
+      </div>
+      <div class="artists">
+        <div class="images">
+          <ul>
+            <li class="Bilderbuch"><h1>Bilderbuch</h1></li>
+            <li class="Wanda"><h1>Wanda</h1></li>
+            <li class="Christina"><h1>Christina Stürmer</h1></li>
+            <li class="Volbeat"><h1>Volbeat</h1></li>
+            <li class="Imagine"><h1>Imagine Dragons</h1></li>
+            <li class="Opus"><h1>Opus</h1></li>
+          </ul>
+        </div>
+        <div class="descriptions">
+          <ul>
+            <li class="Bilderbuch">Bilderbuch is among the most successful Austrian rock bands and known for their Art Pop music. <br>
+              The band has released 6 albums.<br>
+              The two latest singles were released this year and are waiting to be performed in front of you!</li>
+            <li class="Wanda">Wanda is an Austrian indie pop band founded in Vienna in 2012.<br>
+              Their indie pop style is influenced by rock 'n' roll, as well as Austropop.<br>
+              They label their music as "pop music with 'Amore'".</li>
+            <li class="Christina">Christina Stürmer is an Austrian singer and songwriter.<br>
+              With the release of her international debut album Schwarz Weiss, Stürmer became one of the biggest-selling Austrian artists to emerge in German-speaking Europe in the mid-2000s.<br>
+              Throughout a career spanning 15 years, Stürmer has sold over 2.0 million records.</li>
+            <li class="Volbeat">Volbeat are a Danish rock band formed in Copenhagen in 2001.<br>
+              They play a fusion of rock and roll, heavy metal and rockabilly.<br>
+              Their second album Rock the Rebel/Metal the Devil received platinum status, and their 2010 release Beyond Hell/Above Heaven was subject to widespread international critical acclaim, receiving double platinum in Denmark, platinum in Finland and Germany, and gold in the United States, Sweden and Austria.</li>
+            <li class="Imagine">Imagine Dragons is an American pop rock band from Las Vegas, Nevada.<br>
+              Imagine Dragons have sold 77.5 million certified singles in the US and 20 million albums worldwide.<br>
+              They were the most streamed group of 2018 on Spotify and are the first rock act to have four songs, "Radioactive", "Demons", "Believer" and "Thunder", to surpass one billion streams each.</li>
+            <li class="Opus">Opus is a pop-rock group from Graz, Austria.<br>
+              The band is chiefly known for its 1985 single release, "Live Is Life", which reached the Top 10 in several European countries.<br>
+              In August 2020, the band announced its planned breakup on December 21, 2021. On that day, there will be one last concert at the Graz Opera House.</li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div id="Testimonials">
 
