--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
     </nav>
     <div id="Schedule">
       <div class="time-table">
-          <ul>
-            <li>17:00 - Bilderbuch</li>
-            <li>18:00 - Wanda</li>
-            <li>19:00 - Christina Stürmer</li>
-            <li>20:00 - Volbeat</li>
-            <li>21:00 - Imagine Dragons</li>
-            <li>22:00 - Opus</li>
-          </ul>
+        <h2>Schedule</h2>
+        <ul>
+          <li>17:00 - Bilderbuch</li>
+          <li>18:00 - Wanda</li>
+          <li>19:00 - Christina Stürmer</li>
+          <li>20:00 - Volbeat</li>
+          <li>21:00 - Imagine Dragons</li>
+          <li>22:00 - Opus</li>
+        </ul>
       </div>
       <div class="artists">
         <div class="images">
@@ -63,73 +64,125 @@
         </div>
         <div class="descriptions">
           <ul>
-            <li class="Bilderbuch">Bilderbuch is among the most successful Austrian rock bands and known for their Art Pop music. <br>
-              The band has released 6 albums.<br>
-              The two latest singles were released this year and are waiting to be performed in front of you!</li>
-            <li class="Wanda">Wanda is an Austrian indie pop band founded in Vienna in 2012.<br>
-              Their indie pop style is influenced by rock 'n' roll, as well as Austropop.<br>
-              They label their music as "pop music with 'Amore'".</li>
-            <li class="Christina">Christina Stürmer is an Austrian singer and songwriter.<br>
-              With the release of her international debut album Schwarz Weiss, Stürmer became one of the biggest-selling Austrian artists to emerge in German-speaking Europe in the mid-2000s.<br>
-              Throughout a career spanning 15 years, Stürmer has sold over 2.0 million records.</li>
-            <li class="Volbeat">Volbeat are a Danish rock band formed in Copenhagen in 2001.<br>
-              They play a fusion of rock and roll, heavy metal and rockabilly.<br>
-              Their second album Rock the Rebel/Metal the Devil received platinum status, and their 2010 release Beyond Hell/Above Heaven was subject to widespread international critical acclaim, receiving double platinum in Denmark, platinum in Finland and Germany, and gold in the United States, Sweden and Austria.</li>
-            <li class="Imagine">Imagine Dragons is an American pop rock band from Las Vegas, Nevada.<br>
-              Imagine Dragons have sold 77.5 million certified singles in the US and 20 million albums worldwide.<br>
-              They were the most streamed group of 2018 on Spotify and are the first rock act to have four songs, "Radioactive", "Demons", "Believer" and "Thunder", to surpass one billion streams each.</li>
-            <li class="Opus">Opus is a pop-rock group from Graz, Austria.<br>
-              The band is chiefly known for its 1985 single release, "Live Is Life", which reached the Top 10 in several European countries.<br>
-              In August 2020, the band announced its planned breakup on December 21, 2021. On that day, there will be one last concert at the Graz Opera House.</li>
+            <li class="Bilderbuch">
+              Bilderbuch is among the most successful Austrian rock bands and
+              known for their Art Pop music. <br />
+              The band has released 6 albums.<br />
+              The two latest singles were released this year and are waiting to
+              be performed in front of you!
+            </li>
+            <li class="Wanda">
+              Wanda is an Austrian indie pop band founded in Vienna in 2012.<br />
+              Their indie pop style is influenced by rock 'n' roll, as well as
+              Austropop.<br />
+              They label their music as "pop music with 'Amore'".
+            </li>
+            <li class="Christina">
+              Christina Stürmer is an Austrian singer and songwriter.<br />
+              With the release of her international debut album Schwarz Weiss,
+              Stürmer became one of the biggest-selling Austrian artists to
+              emerge in German-speaking Europe in the mid-2000s.<br />
+              Throughout a career spanning 15 years, Stürmer has sold over 2.0
+              million records.
+            </li>
+            <li class="Volbeat">
+              Volbeat are a Danish rock band formed in Copenhagen in 2001.<br />
+              They play a fusion of rock and roll, heavy metal and
+              rockabilly.<br />
+              Their second album Rock the Rebel/Metal the Devil received
+              platinum status, and their 2010 release Beyond Hell/Above Heaven
+              was subject to widespread international critical acclaim,
+              receiving double platinum in Denmark, platinum in Finland and
+              Germany, and gold in the United States, Sweden and Austria.
+            </li>
+            <li class="Imagine">
+              Imagine Dragons is an American pop rock band from Las Vegas,
+              Nevada.<br />
+              Imagine Dragons have sold 77.5 million certified singles in the US
+              and 20 million albums worldwide.<br />
+              They were the most streamed group of 2018 on Spotify and are the
+              first rock act to have four songs, "Radioactive", "Demons",
+              "Believer" and "Thunder", to surpass one billion streams each.
+            </li>
+            <li class="Opus">
+              Opus is a pop-rock group from Graz, Austria.<br />
+              The band is chiefly known for its 1985 single release, "Live Is
+              Life", which reached the Top 10 in several European countries.<br />
+              In August 2020, the band announced its planned breakup on December
+              21, 2021. On that day, there will be one last concert at the Graz
+              Opera House.
+            </li>
           </ul>
         </div>
       </div>
     </div>
     <div id="Testimonials">
-
+      <div>
+        <h2>Testimonials</h2>
+        <p>Testimonials from last year's event</p>
+      </div>
     </div>
     <div id="FAQ">
+      <h2>Frequently asked questions</h2>
       <div>
         <p class="question">What is Stars in Graz?</p>
-        <p class="answer">Stars in Graz is a one-day music concert where many different artists perform their most popular songs. <br>
-          It takes place once a year since 2015.</p>
+        <p class="answer">
+          Stars in Graz is a one-day music concert where many different artists
+          perform their most popular songs. <br />
+          It takes place once a year since 2015.
+        </p>
       </div>
-          <hr/>
+      <hr />
       <div>
         <p class="question">When does Stars in Graz take place?</p>
-        <p class="answer">On 30.10.2021. <br>
+        <p class="answer">
+          On 30.10.2021. <br />
           The first act starts at 17:00.
-          </p>
+        </p>
       </div>
-          <hr/>
+      <hr />
       <div>
         <p class="question">What is the age minimum?</p>
-        <p class="answer">Persons under 16 years of age are not allowed to enter without the accompaniment of an adult.</p>
+        <p class="answer">
+          Persons under 16 years of age are not allowed to enter without the
+          accompaniment of an adult.
+        </p>
       </div>
-        <hr/>
+      <hr />
       <div>
         <p class="question">Can I pay by credit card?</p>
         <p class="answer">Yes, credit cards can be used at all food stands.</p>
       </div>
-        <hr/>
+      <hr />
       <div>
         <p class="question">What is the golden circle?</p>
-        <p class="answer">In the Golden Circle, you experience your favorite act as close as possible. <br>
-          It is located directly in front of the stage. <br>
-          Show your Golden Circle ticket and you'll get to this area quickly and easily thanks to a separate entrance.</p>
+        <p class="answer">
+          In the Golden Circle, you experience your favorite act as close as
+          possible. <br />
+          It is located directly in front of the stage. <br />
+          Show your Golden Circle ticket and you'll get to this area quickly and
+          easily thanks to a separate entrance.
+        </p>
       </div>
-          <hr/>
+      <hr />
       <div>
         <p class="question">Are there wheelchair spaces?</p>
-        <p class="answer">Of course, wheelchair spaces are available. <br>
-          However, spaces are limited. Please contact us in advance for more information.</p>
+        <p class="answer">
+          Of course, wheelchair spaces are available. <br />
+          However, spaces are limited. Please contact us in advance for more
+          information.
+        </p>
       </div>
-          <hr/>
+      <hr />
       <div>
         <p class="question">Can I resale my ticket if I cannot go?</p>
-        <p class="answer">The resale of the tickets is prohibited. <br>
-          For security reasons, we also strongly advise against buying the tickets from anyone. <br>
-          Anyone who tries to gain access to the event with copied or forged tickets will be suspected of ticket misuse and prosecuted.</p>
+        <p class="answer">
+          The resale of the tickets is prohibited. <br />
+          For security reasons, we also strongly advise against buying the
+          tickets from anyone. <br />
+          Anyone who tries to gain access to the event with copied or forged
+          tickets will be suspected of ticket misuse and prosecuted.
+        </p>
       </div>
     </div>
   </body>
