--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Stars in Graz</title>
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
   </head>
   <body>
     <div class="landing">
