--- a/index.html
+++ b/index.html
@@ -118,9 +118,22 @@
       </div>
     </div>
     <div id="Testimonials">
-      <div>
+      <div class="title">
         <h2>Testimonials</h2>
         <p>Testimonials from last year's event</p>
+      </div>
+      <div class="city-image">
+      </div>
+        <div>
+          <blockquote><span>"</span>Wow! Such a delightful fun evening last Saturday.
+            The bands were excellent and the programme perfect!
+            We’ll look forward to the next one.<span>"</span></blockquote>
+            <p>- David Reaney</p>
+        </div>
+      <div>
+        <blockquote><span>"</span>I can’t overstate how much fun Stars in Graz was.
+          Friends, great music, scenery, late night party. Wow! So glad to be there!<span>"</span></blockquote>
+          <p>- Christian Baumgartner</p>
       </div>
     </div>
     <div id="FAQ">
