Added tickets button

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
       <a class="scroll-down" href="#Menu">^</a>
     </div>
     <nav id="Menu">
+      <a href="#Tickets">Tickets</a>
       <a href="#Schedule">Schedule</a>
       <a href="#Testimonials">Testimonials</a>
       <a href="#FAQ">FAQ</a>
     </nav>
+    <div id="Tickets">
+      <a href="#">Buy tickets</a>
+    </div>
     <div id="Schedule">
       <div class="time-table">
         <h2>Schedule</h2>
