Made schedule more responsive

--- a/index.html
+++ b/index.html
@@ -59,30 +59,30 @@
       <div class="artists">
         <div class="images">
           <ul>
-            <li class="Bilderbuch"><h1>Bilderbuch</h1></li>
-            <li class="Wanda"><h1>Wanda</h1></li>
-            <li class="Christina"><h1>Christina Stürmer</h1></li>
-            <li class="Volbeat"><h1>Volbeat</h1></li>
-            <li class="Imagine"><h1>Imagine Dragons</h1></li>
-            <li class="Opus"><h1>Opus</h1></li>
+            <li><img src="./media/images/artists/bilderbuch2.jpg" alt="Photo of Bilderbuch"> <h1>Bilderbuch</h1></li>
+            <li><img src="./media/images/artists/wanda3.jpg" alt="Photo of Wanda"><h1>Wanda</h1></li>
+            <li><img src="./media/images/artists/christina-sturmer3.jpg" alt="Photo of Christina Stürmer"><h1>Christina Stürmer</h1></li>
+            <li><img src="./media/images/artists/volbeat2.jpg" alt="Photo of Volbeat"><h1>Volbeat</h1></li>
+            <li><img src="./media/images/artists/imagine-dragons2.jpg" alt="Photo of Imagine Dragons"><h1>Imagine Dragons</h1></li>
+            <li><img src="./media/images/artists/opus.jpg" alt="Photo of Opus"><h1>Opus</h1></li>
           </ul>
         </div>
         <div class="descriptions">
           <ul>
-            <li class="Bilderbuch">
+            <li>
               Bilderbuch is among the most successful Austrian rock bands and
               known for their Art Pop music. <br />
               The band has released 6 albums.<br />
               The two latest singles were released this year and are waiting to
               be performed in front of you!
             </li>
-            <li class="Wanda">
+            <li>
               Wanda is an Austrian indie pop band founded in Vienna in 2012.<br />
               Their indie pop style is influenced by rock 'n' roll, as well as
               Austropop.<br />
               They label their music as "pop music with 'Amore'".
             </li>
-            <li class="Christina">
+            <li>
               Christina Stürmer is an Austrian singer and songwriter.<br />
               With the release of her international debut album Schwarz Weiss,
               Stürmer became one of the biggest-selling Austrian artists to
@@ -90,7 +90,7 @@
               Throughout a career spanning 15 years, Stürmer has sold over 2.0
               million records.
             </li>
-            <li class="Volbeat">
+            <li>
               Volbeat are a Danish rock band formed in Copenhagen in 2001.<br />
               They play a fusion of rock and roll, heavy metal and
               rockabilly.<br />
@@ -100,7 +100,7 @@
               receiving double platinum in Denmark, platinum in Finland and
               Germany, and gold in the United States, Sweden and Austria.
             </li>
-            <li class="Imagine">
+            <li>
               Imagine Dragons is an American pop rock band from Las Vegas,
               Nevada.<br />
               Imagine Dragons have sold 77.5 million certified singles in the US
@@ -109,7 +109,7 @@
               first rock act to have four songs, "Radioactive", "Demons",
               "Believer" and "Thunder", to surpass one billion streams each.
             </li>
-            <li class="Opus">
+            <li>
               Opus is a pop-rock group from Graz, Austria.<br />
               The band is chiefly known for its 1985 single release, "Live Is
               Life", which reached the Top 10 in several European countries.<br />
@@ -127,6 +127,7 @@
         <p>Testimonials from last year's event</p>
       </div>
       <div class="city-image">
+          <img src="./media/images/graz/josh-hild-03NoCdSvbLw-unsplash.jpg" alt="Photo of Graz">
       </div>
         <div>
           <blockquote><span>"</span>Wow! Such a delightful fun evening last Saturday.
