Added title fonr

--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <title>Stars in Graz</title>
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
@@ -19,7 +16,7 @@
         <h1 class="title">Stars in Graz</h1>
         <div class="desc">
           <p>Messe Congress Graz<br />30.10.2021</p>
-          <p>Check back on<br />25.09.2021</p>
+          <p>Check back on<br /><b>25.09.2021</b></p>
           <div>
             <p>Featuring:</p>
             <ul class="carousel">
@@ -206,6 +203,6 @@
     </div>
   </body>
   <footer>
-    
+
   </footer>
 </html>
