--- a/index.html
+++ b/index.html
@@ -1,208 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <title>Stars in Graz</title>
-    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
-  </head>
-  <body>
-    <div class="landing">
-      <div class="content">
-        <h1 class="title">Stars in Graz</h1>
-        <div class="desc">
-          <p>Messe Congress Graz<br />30.10.2021</p>
-          <p>Check back on<br /><b>25.09.2021</b></p>
-          <div>
-            <p>Featuring:</p>
-            <ul class="carousel">
-              <li>Bilderbuch</li>
-              <li>Wanda</li>
-              <li>Christina Stürmer</li>
-              <li>Volbeat</li>
-              <li>Imagine Dragons</li>
-              <li>Opus</li>
-            </ul>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Roboto+Slab:wght@900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <title>Stars in Graz</title>
+  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+</head>
+
+<body>
+  <div class="landing">
+    <div class="content">
+      <h1 class="title">Stars in Graz</h1>
+      <div class="desc">
+        <p>Messe Congress Graz<br />30.10.2021</p>
+        <p>Check back on<br /><b>25.09.2021</b></p>
+        <div>
+          <p>Featuring:</p>
+          <ul class="carousel">
+            <li>Bilderbuch</li>
+            <li>Wanda</li>
+            <li>Christina Stürmer</li>
+            <li>Volbeat</li>
+            <li>Imagine Dragons</li>
+            <li>Opus</li>
+          </ul>
         </div>
       </div>
-      <a class="scroll-down" href="#Menu">^</a>
     </div>
-    <nav id="Menu">
-      <a href="#Tickets">Tickets</a>
-      <a href="#Schedule">Schedule</a>
-      <a href="#Testimonials">Testimonials</a>
-      <a href="#FAQ">FAQ</a>
-    </nav>
-    <div id="Tickets">
-      <a href="#">Buy tickets</a>
+    <a class="scroll-down" href="#Menu">^</a>
+  </div>
+  <nav id="Menu">
+    <a href="#Tickets">Tickets</a>
+    <a href="#Schedule">Schedule</a>
+    <a href="#Testimonials">Testimonials</a>
+    <a href="#FAQ">FAQ</a>
+  </nav>
+  <div id="Tickets">
+    <a href="#">Buy tickets</a>
+  </div>
+  <div id="Schedule">
+    <div class="time-table">
+      <h2>Schedule</h2>
+      <ul>
+        <li>17:00 - Bilderbuch</li>
+        <li>18:00 - Wanda</li>
+        <li>19:00 - Christina Stürmer</li>
+        <li>20:00 - Volbeat</li>
+        <li>21:00 - Imagine Dragons</li>
+        <li>22:00 - Opus</li>
+      </ul>
     </div>
-    <div id="Schedule">
-      <div class="time-table">
-        <h2>Schedule</h2>
+    <div class="artists">
+      <div class="images">
         <ul>
-          <li>17:00 - Bilderbuch</li>
-          <li>18:00 - Wanda</li>
-          <li>19:00 - Christina Stürmer</li>
-          <li>20:00 - Volbeat</li>
-          <li>21:00 - Imagine Dragons</li>
-          <li>22:00 - Opus</li>
+          <li><img src="./media/images/artists/bilderbuch2.jpg" alt="Photo of Bilderbuch">
+            <h1>Bilderbuch</h1>
+          </li>
+          <li><img src="./media/images/artists/wanda3.jpg" alt="Photo of Wanda">
+            <h1>Wanda</h1>
+          </li>
+          <li><img src="./media/images/artists/christina-sturmer3.jpg" alt="Photo of Christina Stürmer">
+            <h1>Christina Stürmer</h1>
+          </li>
+          <li><img src="./media/images/artists/volbeat2.jpg" alt="Photo of Volbeat">
+            <h1>Volbeat</h1>
+          </li>
+          <li><img src="./media/images/artists/imagine-dragons2.jpg" alt="Photo of Imagine Dragons">
+            <h1>Imagine Dragons</h1>
+          </li>
+          <li><img src="./media/images/artists/opus.jpg" alt="Photo of Opus">
+            <h1>Opus</h1>
+          </li>
         </ul>
       </div>
-      <div class="artists">
-        <div class="images">
-          <ul>
-            <li><img src="./media/images/artists/bilderbuch2.jpg" alt="Photo of Bilderbuch"> <h1>Bilderbuch</h1></li>
-            <li><img src="./media/images/artists/wanda3.jpg" alt="Photo of Wanda"><h1>Wanda</h1></li>
-            <li><img src="./media/images/artists/christina-sturmer3.jpg" alt="Photo of Christina Stürmer"><h1>Christina Stürmer</h1></li>
-            <li><img src="./media/images/artists/volbeat2.jpg" alt="Photo of Volbeat"><h1>Volbeat</h1></li>
-            <li><img src="./media/images/artists/imagine-dragons2.jpg" alt="Photo of Imagine Dragons"><h1>Imagine Dragons</h1></li>
-            <li><img src="./media/images/artists/opus.jpg" alt="Photo of Opus"><h1>Opus</h1></li>
-          </ul>
-        </div>
-        <div class="descriptions">
-          <ul>
-            <li>
-              Bilderbuch is among the most successful Austrian rock bands and
-              known for their Art Pop music. <br />
-              The band has released 6 albums.<br />
-              The two latest singles were released this year and are waiting to
-              be performed in front of you!
-            </li>
-            <li>
-              Wanda is an Austrian indie pop band founded in Vienna in 2012.<br />
-              Their indie pop style is influenced by rock 'n' roll, as well as
-              Austropop.<br />
-              They label their music as "pop music with 'Amore'".
-            </li>
-            <li>
-              Christina Stürmer is an Austrian singer and songwriter.<br />
-              With the release of her international debut album Schwarz Weiss,
-              Stürmer became one of the biggest-selling Austrian artists to
-              emerge in German-speaking Europe in the mid-2000s.<br />
-              Throughout a career spanning 15 years, Stürmer has sold over 2.0
-              million records.
-            </li>
-            <li>
-              Volbeat are a Danish rock band formed in Copenhagen in 2001.<br />
-              They play a fusion of rock and roll, heavy metal and
-              rockabilly.<br />
-              Their second album Rock the Rebel/Metal the Devil received
-              platinum status, and their 2010 release Beyond Hell/Above Heaven
-              was subject to widespread international critical acclaim,
-              receiving double platinum in Denmark, platinum in Finland and
-              Germany, and gold in the United States, Sweden and Austria.
-            </li>
-            <li>
-              Imagine Dragons is an American pop rock band from Las Vegas,
-              Nevada.<br />
-              Imagine Dragons have sold 77.5 million certified singles in the US
-              and 20 million albums worldwide.<br />
-              They were the most streamed group of 2018 on Spotify and are the
-              first rock act to have four songs, "Radioactive", "Demons",
-              "Believer" and "Thunder", to surpass one billion streams each.
-            </li>
-            <li>
-              Opus is a pop-rock group from Graz, Austria.<br />
-              The band is chiefly known for its 1985 single release, "Live Is
-              Life", which reached the Top 10 in several European countries.<br />
-              In August 2020, the band announced its planned breakup on December
-              21, 2021. On that day, there will be one last concert at the Graz
-              Opera House.
-            </li>
-          </ul>
-        </div>
+      <div class="descriptions">
+        <ul>
+          <li>
+            Bilderbuch is among the most successful Austrian rock bands and
+            known for their Art Pop music. <br />
+            The band has released 6 albums.<br />
+            The two latest singles were released this year and are waiting to
+            be performed in front of you!
+          </li>
+          <li>
+            Wanda is an Austrian indie pop band founded in Vienna in 2012.<br />
+            Their indie pop style is influenced by rock 'n' roll, as well as
+            Austropop.<br />
+            They label their music as "pop music with 'Amore'".
+          </li>
+          <li>
+            Christina Stürmer is an Austrian singer and songwriter.<br />
+            With the release of her international debut album Schwarz Weiss,
+            Stürmer became one of the biggest-selling Austrian artists to
+            emerge in German-speaking Europe in the mid-2000s.<br />
+            Throughout a career spanning 15 years, Stürmer has sold over 2.0
+            million records.
+          </li>
+          <li>
+            Volbeat are a Danish rock band formed in Copenhagen in 2001.<br />
+            They play a fusion of rock and roll, heavy metal and
+            rockabilly.<br />
+            Their second album Rock the Rebel/Metal the Devil received
+            platinum status, and their 2010 release Beyond Hell/Above Heaven
+            was subject to widespread international critical acclaim,
+            receiving double platinum in Denmark, platinum in Finland and
+            Germany, and gold in the United States, Sweden and Austria.
+          </li>
+          <li>
+            Imagine Dragons is an American pop rock band from Las Vegas,
+            Nevada.<br />
+            Imagine Dragons have sold 77.5 million certified singles in the US
+            and 20 million albums worldwide.<br />
+            They were the most streamed group of 2018 on Spotify and are the
+            first rock act to have four songs, "Radioactive", "Demons",
+            "Believer" and "Thunder", to surpass one billion streams each.
+          </li>
+          <li>
+            Opus is a pop-rock group from Graz, Austria.<br />
+            The band is chiefly known for its 1985 single release, "Live Is
+            Life", which reached the Top 10 in several European countries.<br />
+            In August 2020, the band announced its planned breakup on December
+            21, 2021. On that day, there will be one last concert at the Graz
+            Opera House.
+          </li>
+        </ul>
       </div>
     </div>
-    <div id="Testimonials">
-      <div class="title">
-        <h2>Testimonials</h2>
-        <p>Testimonials from last year's event</p>
-      </div>
-      <div class="city-image">
-          <img src="./media/images/graz/josh-hild-03NoCdSvbLw-unsplash.jpg" alt="Photo of Graz">
-      </div>
-        <div>
-          <blockquote><span>"</span>Wow! Such a delightful fun evening last Saturday.
-            The bands were excellent and the programme perfect!
-            We’ll look forward to the next one.<span>"</span></blockquote>
-            <p>- David Reaney</p>
-        </div>
-      <div>
-        <blockquote><span>"</span>I can’t overstate how much fun Stars in Graz was.
-          Friends, great music, scenery, late night party. Wow! So glad to be there!<span>"</span></blockquote>
-          <p>- Christian Baumgartner</p>
-      </div>
+  </div>
+  <div id="Testimonials">
+    <div class="title">
+      <h2>Testimonials</h2>
+      <p>Testimonials from last year's event</p>
     </div>
-    <div id="FAQ">
-      <h2>Frequently asked questions</h2>
-      <div>
-        <p class="question">What is Stars in Graz?</p>
-        <p class="answer">
-          Stars in Graz is a one-day music concert where many different artists
-          perform their most popular songs. <br />
-          It takes place once a year since 2015.
-        </p>
-      </div>
-      <hr />
-      <div>
-        <p class="question">When does Stars in Graz take place?</p>
-        <p class="answer">
-          On 30.10.2021. <br />
-          The first act starts at 17:00.
-        </p>
-      </div>
-      <hr />
-      <div>
-        <p class="question">What is the age minimum?</p>
-        <p class="answer">
-          Persons under 16 years of age are not allowed to enter without the
-          accompaniment of an adult.
-        </p>
-      </div>
-      <hr />
-      <div>
-        <p class="question">Can I pay by credit card?</p>
-        <p class="answer">Yes, credit cards can be used at all food stands.</p>
-      </div>
-      <hr />
-      <div>
-        <p class="question">What is the golden circle?</p>
-        <p class="answer">
-          In the Golden Circle, you experience your favorite act as close as
-          possible. <br />
-          It is located directly in front of the stage. <br />
-          Show your Golden Circle ticket and you'll get to this area quickly and
-          easily thanks to a separate entrance.
-        </p>
-      </div>
-      <hr />
-      <div>
-        <p class="question">Are there wheelchair spaces?</p>
-        <p class="answer">
-          Of course, wheelchair spaces are available. <br />
-          However, spaces are limited. Please contact us in advance for more
-          information.
-        </p>
-      </div>
-      <hr />
-      <div>
-        <p class="question">Can I resale my ticket if I cannot go?</p>
-        <p class="answer">
-          The resale of the tickets is prohibited. <br />
-          For security reasons, we also strongly advise against buying the
-          tickets from anyone. <br />
-          Anyone who tries to gain access to the event with copied or forged
-          tickets will be suspected of ticket misuse and prosecuted.
-        </p>
-      </div>
+    <div class="city-image">
+      <img src="./media/images/graz/josh-hild-03NoCdSvbLw-unsplash.jpg" alt="Photo of Graz">
     </div>
-  </body>
-  <footer>
+    <div>
+      <blockquote><span>"</span>Wow! Such a delightful fun evening last Saturday.
+        The bands were excellent and the programme perfect!
+        We’ll look forward to the next one.<span>"</span></blockquote>
+      <p>- David Reaney</p>
+    </div>
+    <div>
+      <blockquote><span>"</span>I can’t overstate how much fun Stars in Graz was.
+        Friends, great music, scenery, late night party. Wow! So glad to be there!<span>"</span></blockquote>
+      <p>- Christian Baumgartner</p>
+    </div>
+  </div>
+  <div id="FAQ">
+    <h2>Frequently asked questions</h2>
+    <div>
+      <p class="question">What is Stars in Graz?</p>
+      <p class="answer">
+        Stars in Graz is a one-day music concert where many different artists
+        perform their most popular songs. <br />
+        It takes place once a year since 2015.
+      </p>
+    </div>
+    <hr />
+    <div>
+      <p class="question">When does Stars in Graz take place?</p>
+      <p class="answer">
+        On 30.10.2021. <br />
+        The first act starts at 17:00.
+      </p>
+    </div>
+    <hr />
+    <div>
+      <p class="question">What is the age minimum?</p>
+      <p class="answer">
+        Persons under 16 years of age are not allowed to enter without the
+        accompaniment of an adult.
+      </p>
+    </div>
+    <hr />
+    <div>
+      <p class="question">Can I pay by credit card?</p>
+      <p class="answer">Yes, credit cards can be used at all food stands.</p>
+    </div>
+    <hr />
+    <div>
+      <p class="question">What is the golden circle?</p>
+      <p class="answer">
+        In the Golden Circle, you experience your favorite act as close as
+        possible. <br />
+        It is located directly in front of the stage. <br />
+        Show your Golden Circle ticket and you'll get to this area quickly and
+        easily thanks to a separate entrance.
+      </p>
+    </div>
+    <hr />
+    <div>
+      <p class="question">Are there wheelchair spaces?</p>
+      <p class="answer">
+        Of course, wheelchair spaces are available. <br />
+        However, spaces are limited. Please contact us in advance for more
+        information.
+      </p>
+    </div>
+    <hr />
+    <div>
+      <p class="question">Can I resale my ticket if I cannot go?</p>
+      <p class="answer">
+        The resale of the tickets is prohibited. <br />
+        For security reasons, we also strongly advise against buying the
+        tickets from anyone. <br />
+        Anyone who tries to gain access to the event with copied or forged
+        tickets will be suspected of ticket misuse and prosecuted.
+      </p>
+    </div>
+  </div>
+</body>
+<footer>
 
-  </footer>
+</footer>
+
 </html>
