Optimized the images

--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
     <div class="artists">
       <div class="images">
         <ul>
-          <li><img src="./media/images/artists/bilderbuch2.jpg" alt="Photo of Bilderbuch">
+          <li><img src="./media/images/bilderbuch2.jpg" alt="Photo of Bilderbuch">
             <h1>Bilderbuch</h1>
           </li>
-          <li><img src="./media/images/artists/wanda3.jpg" alt="Photo of Wanda">
+          <li><img src="./media/images/wanda3.jpg" alt="Photo of Wanda">
             <h1>Wanda</h1>
           </li>
-          <li><img src="./media/images/artists/christina-sturmer3.jpg" alt="Photo of Christina Stürmer">
+          <li><img src="./media/images/christina-sturmer3.jpg" alt="Photo of Christina Stürmer">
             <h1>Christina Stürmer</h1>
           </li>
-          <li><img src="./media/images/artists/volbeat2.jpg" alt="Photo of Volbeat">
+          <li><img src="./media/images/volbeat2.jpg" alt="Photo of Volbeat">
             <h1>Volbeat</h1>
           </li>
-          <li><img src="./media/images/artists/imagine-dragons2.jpg" alt="Photo of Imagine Dragons">
+          <li><img src="./media/images/imagine-dragons2.jpg" alt="Photo of Imagine Dragons">
             <h1>Imagine Dragons</h1>
           </li>
-          <li><img src="./media/images/artists/opus.jpg" alt="Photo of Opus">
+          <li><img src="./media/images/opus.jpg" alt="Photo of Opus">
             <h1>Opus</h1>
           </li>
         </ul>
