--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <title>Stars in Graz</title>
-  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
