Fixed link scroll position

--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
     </div>
     <a class="scroll-down" href="#Menu">^</a>
   </div>
+    <div id="Tickets">
   <nav id="Menu">
-    <a href="#Tickets">Tickets</a>
-    <a href="#Schedule">Schedule</a>
-    <a href="#Testimonials">Testimonials</a>
-    <a href="#FAQ">FAQ</a>
+      <a href="#Tickets">Tickets</a>
+      <a href="#Schedule">Schedule</a>
+      <a href="#Testimonials">Testimonials</a>
+      <a href="#FAQ">FAQ</a>
   </nav>
-  <div id="Tickets">
+  <div class="tickets">
     <a href="#">Buy tickets</a>
   </div>
+    </div>
   <div id="Schedule">
     <div class="time-table">
       <h2>Schedule</h2>
